Add commented out jvm args for profiling performanceReport